--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "next": "^9.3.5",
+    "next-redux-wrapper": "^5.0.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@types/node": "^13.11.1",
     "@types/react": "^16.9.34",
+    "@types/react-redux": "^7.1.7",
     "typescript": "^3.8.3"
   }
 }
