--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.9.11",
+    "@material-ui/icons": "^4.9.1",
     "next": "^9.3.5",
     "next-redux-wrapper": "^5.0.0",
     "react": "^16.13.1",
