--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@material-ui/core": "^4.9.11",
     "@material-ui/icons": "^4.9.1",
+    "axios": "^0.19.2",
     "next": "^9.3.5",
     "next-redux-wrapper": "^5.0.0",
     "react": "^16.13.1",
