--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
     "next": "^9.3.5",
+    "next-redux-saga": "^4.1.2",
     "next-redux-wrapper": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -26,6 +27,7 @@
     "redux-saga": "^1.1.3"
   },
   "devDependencies": {
+    "@types/next-redux-saga": "^3.0.2",
     "@types/node": "^13.11.1",
     "@types/react": "^16.9.34",
     "@types/react-redux": "^7.1.7",
