--- a/package.json
+++ b/package.json
@@ -3,12 +3,19 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "homepage": "https://phatnguyenuit.github.io/nextjs-typescript",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/phatnguyenuit/nextjs-typescript"
+  },
   "scripts": {
     "start": "next",
     "build": "next build && next export -o build",
     "lint": "eslint src/**/*.{ts,tsx}",
     "lint:fix": "npm run lint --fix",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "",
@@ -42,6 +49,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
     "eslint-plugin-redux-saga": "^1.1.3",
+    "gh-pages": "^2.2.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.1.6",
     "prettier": "^2.0.4",
