--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "url": "https://github.com/phatnguyenuit/nextjs-typescript"
   },
   "scripts": {
-    "dev": "next dev -p $PORT",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next export -o build",
     "lint": "eslint src/**/*.{ts,tsx}",
     "lint:fix": "npm run lint --fix",
     "type-check": "tsc --noEmit"
