--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
+    "recompose": "^0.30.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3"
   },
@@ -38,6 +39,7 @@
     "@types/node": "^13.11.1",
     "@types/react": "^16.9.34",
     "@types/react-redux": "^7.1.7",
+    "@types/recompose": "^0.30.7",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@typescript-eslint/parser": "^2.29.0",
     "eslint": "^6.8.0",
